# seismoalert

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/seismoalert/: __init__.py  alerts.py  analyzer.py  cli.py  client.py  models.py  visualizer.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_client.py  test_visualizer.py
tests/unit/: test_alerts.py  test_analyzer.py  test_models.py
