[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seismoalert"
version = "0.1.1"
description = "Real-time earthquake monitor and anomaly detector using USGS data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Utpal Kumar"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "folium>=0.15.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.scripts]
seismoalert = "seismoalert.cli:main"

[project.urls]
Homepage = "https://github.com/utpalkumar/seismoalert"
Documentation = "https://seismoalert.readthedocs.io"
Repository = "https://github.com/utpalkumar/seismoalert"
Issues = "https://github.com/utpalkumar/seismoalert/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (mocked external services)",
    "e2e: End-to-end tests",
]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["seismoalert"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
